--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,11 @@
 .navbar-style {
   background-color: #000000 !important;
 }
+.green-highlight {
+  color: #008000;
+  font-size: 40px;
+}
+.red-highlight {
+  color: #ff0000;
+  font-size: 25px;
+}
